--- a/configs/dinov2/domain-net/finetune_lp.yaml
+++ b/configs/dinov2/domain-net/finetune_lp.yaml
@@ -23,11 +23,13 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-encoder: dinov2_vitb14
+# encoder: dinov2_vitb14
+encoder: dinov2_vits14
 LP: False
 
-path: ./save/dinov2/domain-net/stdFT/meta-domain-net_dinov2_vitb14_lp_logistic_15y1s_150m_200M
-ckpt: lp_epoch-10.pth
+# path: ./save/dinov2/domain-net/stdFT/meta-domain-net_dinov2_vitb14_lp_logistic_15y1s_150m_200M
+path: ./save/dinov2/domain-net/stdFT/meta-domain-net_dinov2_vits14_lp_logistic_15y1s_150m_200M
+ckpt: lp_epoch-5.pth
 LP_FT: True
 
 
@@ -46,18 +48,22 @@ lp_optimizer_args:
     - 80
   momentum: 0.9
   weight_decay: 0
-lp_n_epochs: 30
+lp_n_epochs: 40
 
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-7 # 0.001
+  lr: 1.e-8 # 0.001
+  # schedule: step
+  # decay_rate: 0.1
+  # decay_epochs:
+  #   - 3
   momentum: 0.9
   weight_decay: 5.e-6
 n_epochs: 10
 
 save_path: ./save/dinov2/domain-net/stdFT
 
-save_epoch: 10
+save_epoch: 1
 V: 1
 
 
