--- a/configs/dinov2/domain-net/test.yaml
+++ b/configs/dinov2/domain-net/test.yaml
@@ -11,9 +11,15 @@ test_set_args:
   n_query: 15
 
 
-encoder: dinov2_vitb14
+# encoder: dinov2_vitb14
+
 # path: ./save/dinov2/domain-net/Mm_trend/meta-domain-net_dinov2_vitb14_fs-centroid_15y1s_150m_200M
-path: ./save/dinov2/domain-net/stdFT/meta-domain-net_dinov2_vitb14_lp_logistic_15y1s_150m_200M
+# path: ./save/dinov2/domain-net/stdFT/meta-domain-net_dinov2_vitb14_lp_logistic_15y1s_150m_200M
+
+encoder: dinov2_vits14
+# path: ./save/dinov2/domain-net/Mm_trend/meta-domain-net_dinov2_vits14_fs-centroid_15y1s_150m_200M
+path: ./save/dinov2/domain-net/stdFT/meta-domain-net_dinov2_vits14_lp_logistic_15y1s_150m_200M
+
 ckpt: max-va.pth
 # ckpt: epoch-last.pth
 
