--- a/configs/dinov2/mini-imagenet/finetune_lp.yaml
+++ b/configs/dinov2/mini-imagenet/finetune_lp.yaml
@@ -23,10 +23,13 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-encoder: dinov2_vitb14
+# encoder: dinov2_vitb14
+encoder: dinov2_vits14
 LP: False
 
-path: ./save/dinov2/mini-imagenet/stdFT/meta-mini-imagenet_dinov2_vitb14_lp_logistic_15y1s_150m_200M
+# path: ./save/dinov2/mini-imagenet/stdFT/meta-mini-imagenet_dinov2_vitb14_lp_logistic_15y1s_150m_200M
+path: ./save/dinov2/mini-imagenet/stdFT/meta-mini-imagenet_dinov2_vits14_lp_logistic_15y1s_150m_200M
+
 ckpt: lp_epoch-10.pth
 LP_FT: True
 
@@ -51,6 +54,10 @@ lp_n_epochs: 30
 optimizer: sgd
 optimizer_args:
   lr: 1.e-7 # 0.001
+  schedule: step
+  decay_rate: 0.1
+  decay_epochs:
+    - 3
   momentum: 0.9
   weight_decay: 5.e-6
 n_epochs: 10
