--- a/configs/dinov2/mini-imagenet/test.yaml
+++ b/configs/dinov2/mini-imagenet/test.yaml
@@ -10,9 +10,14 @@ test_set_args:
   n_query: 15
 
 
-encoder: dinov2_vitb14
+# encoder: dinov2_vitb14
 # path: ./save/dinov2/mini-imagenet/Mm_trend/meta-mini-imagenet_dinov2_vitb14_fs-centroid_15y1s_150m_200M
-path: ./save/dinov2/mini-imagenet/stdFT/meta-mini-imagenet_dinov2_vitb14_lp_logistic_15y1s_150m_200M
+# path: ./save/dinov2/mini-imagenet/stdFT/meta-mini-imagenet_dinov2_vitb14_lp_logistic_15y1s_150m_200M
+
+encoder: dinov2_vits14
+# path: ./save/dinov2/mini-imagenet/Mm_trend/meta-mini-imagenet_dinov2_vits14_fs-centroid_15y1s_150m_200M
+path: ./save/dinov2/mini-imagenet/stdFT/meta-mini-imagenet_dinov2_vits14_lp_logistic_15y1s_150m_200M
+
 ckpt: max-va.pth
 # ckpt: epoch-last.pth
 
