--- a/configs/dinov2/tiered-imagenet/finetune.yaml
+++ b/configs/dinov2/tiered-imagenet/finetune.yaml
@@ -23,7 +23,8 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-encoder: dinov2_vitb14
+# encoder: dinov2_vitb14
+encoder: dinov2_vits14
 
 # path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
 # path: ./save/tiered-imagenet/Mm_trend/meta-tiered-imagenet_ViT-B32_fs-centroid_15y1s_150m_600M
