--- a/configs/mocov3/domain-net/finetune.yaml
+++ b/configs/mocov3/domain-net/finetune.yaml
@@ -1,9 +1,9 @@
-dataset: meta-mini-imagenet
+dataset: meta-domain-net
 train_set_args: 
+  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-train
-  size: 224           # added for ViT
-  transform: dinov2
-  val_transform: dinov2
+  size: 224           
+  transform: mocov3
   n_batch: 200
   n_episode: 1
   n_way: 15
@@ -11,10 +11,10 @@ train_set_args:
   n_query: 9
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 val_set_args:
+  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-val
-  size: 224           # added for ViT
+  size: 224           
   transform: make_classification_eval_transform
-  val_transform: make_classification_eval_transform
   n_batch: 200
   n_episode: 1
   n_way: 15
@@ -23,8 +23,14 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-# encoder: dinov2_vitb14
-encoder: dinov2_vits14
+encoder: mocov3_vit
+encoder_args: 
+  # arch: vit_small
+  # ckpt_path: ../pretrained_model/mocov3/vit-s-300ep.pth.tar
+  arch: vit_base
+  ckpt_path: ../pretrained_model/mocov3/vit-b-300ep.pth.tar
+
+
 
 # path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
 # path: ./save/tiered-imagenet/Mm_trend/meta-tiered-imagenet_ViT-B32_fs-centroid_15y1s_150m_600M
@@ -38,13 +44,13 @@ classifier_args:
 
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-6
+  lr: 1.e-5
   momentum: 0.9
   weight_decay: 0
 
 
 ########### M,m trend
-save_path: ./save/dinov2/mini-imagenet/Mm_trend
+save_path: ./save/mocov3/domain-net/Mm_trend
 
 
 save_epoch: 5
