--- a/configs/mocov3/domain-net/finetune_lp.yaml
+++ b/configs/mocov3/domain-net/finetune_lp.yaml
@@ -1,9 +1,9 @@
-dataset: meta-tiered-imagenet
+dataset: meta-domain-net
 train_set_args: 
+  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-train
-  size: 224           # added for ViT
-  transform: dinov2
-  val_transform: dinov2
+  size: 224           
+  transform: mocov3
   n_batch: 200
   n_episode: 1
   n_way: 15
@@ -11,10 +11,10 @@ train_set_args:
   n_query: 9
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 val_set_args:
+  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-val
-  size: 224           # added for ViT
+  size: 224           
   transform: make_classification_eval_transform
-  val_transform: make_classification_eval_transform
   n_batch: 200
   n_episode: 1
   n_way: 15
@@ -23,15 +23,21 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-# encoder: dinov2_vitb14
-encoder: dinov2_vits14
-LP: False
+encoder: mocov3_vit
+encoder_args: 
+  # arch: vit_small
+  # ckpt_path: ../pretrained_model/mocov3/vit-s-300ep.pth.tar
+  arch: vit_base
+  ckpt_path: ../pretrained_model/mocov3/vit-b-300ep.pth.tar
+
+
+LP: True
 
 # path: ./save/dinov2/tiered-imagenet/stdFT/meta-tiered-imagenet_dinov2_vitb14_lp_logistic_15y1s_150m_200M
-path: ./save/dinov2/tiered-imagenet/stdFT/meta-tiered-imagenet_dinov2_vits14_lp_logistic_15y1s_150m_200M
+# path: ./save/mocov3/tiered-imagenet/stdFT/meta-tiered-imagenet_mocov3_vit_lp_logistic_15y1s_150m_200M
 
-ckpt: lp_epoch-10.pth
-LP_FT: True
+# ckpt: lp_epoch-20.pth
+LP_FT: False
 
 
 classifier: fs-centroid
@@ -54,15 +60,15 @@ lp_n_epochs: 30
 optimizer: sgd
 optimizer_args:
   lr: 1.e-7 # 0.001
-  schedule: step
-  decay_rate: 0.1
-  decay_epochs:
-    - 3
+  # schedule: step
+  # decay_rate: 0.1
+  # decay_epochs:
+  #   - 3
   momentum: 0.9
   weight_decay: 5.e-6
 n_epochs: 10
 
-save_path: ./save/dinov2/tiered-imagenet/stdFT
+save_path: ./save/mocov3/domain-net/stdFT
 
 save_epoch: 10
 V: 1
