--- a/configs/mocov3/mini-imagenet/finetune_lp.yaml
+++ b/configs/mocov3/mini-imagenet/finetune_lp.yaml
@@ -1,9 +1,9 @@
-dataset: meta-tiered-imagenet
+dataset: meta-mini-imagenet
 train_set_args: 
   split: meta-train
-  size: 224           # added for ViT
-  transform: dinov2
-  val_transform: dinov2
+  size: 224           
+  transform: mocov3
+  val_transform: mocov3
   n_batch: 200
   n_episode: 1
   n_way: 15
@@ -12,9 +12,9 @@ train_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 val_set_args:
   split: meta-val
-  size: 224           # added for ViT
-  transform: make_classification_eval_transform
-  val_transform: make_classification_eval_transform
+  size: 224           
+  transform: flip
+  val_transform: flip
   n_batch: 200
   n_episode: 1
   n_way: 15
@@ -23,12 +23,17 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-# encoder: dinov2_vitb14
-encoder: dinov2_vits14
+encoder: mocov3_vit
+encoder_args: 
+  # arch: vit_small
+  # ckpt_path: ../pretrained_model/mocov3/vit-s-300ep.pth.tar
+  arch: vit_base
+  ckpt_path: ../pretrained_model/mocov3/vit-b-300ep.pth.tar
+
+
 LP: False
 
-# path: ./save/dinov2/tiered-imagenet/stdFT/meta-tiered-imagenet_dinov2_vitb14_lp_logistic_15y1s_150m_200M
-path: ./save/dinov2/tiered-imagenet/stdFT/meta-tiered-imagenet_dinov2_vits14_lp_logistic_15y1s_150m_200M
+path: ./save/mocov3/mini-imagenet/stdFT/meta-mini-imagenet_mocov3_vit_lp_logistic_15y1s_150m_200M
 
 ckpt: lp_epoch-10.pth
 LP_FT: True
@@ -54,15 +59,15 @@ lp_n_epochs: 30
 optimizer: sgd
 optimizer_args:
   lr: 1.e-7 # 0.001
-  schedule: step
-  decay_rate: 0.1
-  decay_epochs:
-    - 3
+  # schedule: step
+  # decay_rate: 0.1
+  # decay_epochs:
+  #   - 3
   momentum: 0.9
   weight_decay: 5.e-6
 n_epochs: 10
 
-save_path: ./save/dinov2/tiered-imagenet/stdFT
+save_path: ./save/mocov3/mini-imagenet/stdFT
 
 save_epoch: 10
 V: 1
